--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,84 @@
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==20.3.0
 Automat==20.2.0
+backcall==0.2.0
 beautifulsoup4==4.9.3
+bleach==3.3.0
 cffi==1.14.5
 constantly==15.1.0
 cryptography==3.4.6
 cssselect==1.1.0
+decorator==4.4.2
+defusedxml==0.7.1
+entrypoints==0.3
 hyperlink==21.0.0
 idna==3.1
+importlib-metadata==3.9.1
 incremental==21.3.0
+ipykernel==5.5.2
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
 itemadapter==0.2.0
 itemloaders==1.0.4
+jedi==0.18.0
+Jinja2==2.11.3
 jmespath==0.10.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 lxml==4.6.2
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.3.0
+packaging==20.9
+pandocfilters==1.4.3
 parsel==1.6.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.9.0
+prompt-toolkit==3.0.18
 Protego==0.1.16
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyDispatcher==2.0.5
+Pygments==2.8.1
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pyzmq==22.0.3
+qtconsole==5.0.3
+QtPy==1.9.0
 queuelib==1.5.0
 Scrapy==2.4.1
+selenium==3.141.0
+Send2Trash==1.5.0
 service-identity==18.1.0
 six==1.15.0
 soupsieve==2.2.1
+terminado==0.9.4
+testpath==0.4.4
+tornado==6.1
+traitlets==4.3.3
 Twisted==21.2.0
+typing-extensions==3.7.4.3
+urllib3==1.26.4
 w3lib==1.22.0
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==3.4.1
 zope.interface==5.2.0
