--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,6 @@
 [core]
     remote = ssh
 ['remote "ssh"']
-    url = ssh://jiashu@ink-molly.usc.edu/~
+    url = ssh://jiashu@ink-molly.usc.edu//home/jiashu/uncanny_valley/datasets
     user = jiashu
     port = 22000
