--- a/requirements.txt
+++ b/requirements.txt
@@ -1,165 +1,18 @@
-alembic==1.6.5
-antlr4-python3-runtime==4.8
-argcomplete==1.12.3
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037097816/work
-astroid==2.6.2
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall==0.2.0
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-blessings==1.7
-captum==0.4.0
-certifi==2021.5.30
-cffi @ file:///tmp/build/80754af9/cffi_1625831253135/work
-chardet==4.0.0
-click==8.0.1
-cliff==3.8.0
-cmaes==0.8.2
-cmd2==2.1.2
-colorama==0.4.4
-colorlog==5.0.1
-configparser==5.0.2
-contextualized-topic-models==2.0.1
-crcmod==1.7
-cycler==0.10.0
-datasets==1.9.0
-decorator==5.0.9
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dill==0.3.4
-docker-pycreds==0.4.0
-dropbox==11.11.0
-entrypoints==0.3
-fasteners==0.16.3
-filelock==3.0.12
-fsspec==2021.6.1
-funcy==1.16
-future==0.18.2
-gcs-oauth2-boto-plugin==2.7
-gensim==3.8.3
-gitdb==4.0.7
-GitPython==3.1.18
-google-apitools==0.5.32
-google-reauth==0.1.1
-gpustat==0.6.0
-greenlet==1.1.0
-gsutil==4.64
-gym==0.18.3
-h5py==3.3.0
-httplib2==0.19.1
-huggingface-hub==0.0.12
-hydra-core==1.1.0
-hydra-optuna-sweeper==1.1.0
-idna==2.10
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1617874469820/work
-importlib-resources==5.2.0
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.9.2
-jedi==0.18.0
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-joblib==1.0.1
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-learn2learn==0.1.5
-Mako==1.1.4
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621528148836/work
-matplotlib==3.1.3
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-mistune==0.8.4
-mock==2.0.0
-monotonic==1.6
-multiprocess==0.70.12.2
-nbconvert==5.6.1
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nltk==3.6.2
-notebook @ file:///tmp/build/80754af9/notebook_1621528346532/work
-numexpr==2.7.3
-numpy==1.21.1
-nvidia-ml-py3==7.352.0
-oauth2client==4.1.3
-omegaconf==2.1.0
-optuna==2.4.0
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
-pandas==1.3.0
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120460739/work
-parso==0.8.2
-pathtools==0.1.2
-pbr==5.6.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.1
-plotly==5.1.0
-prettytable==2.1.0
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-promise==2.3
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-psutil==5.8.0
-ptyprocess==0.7.0
-pyarrow==4.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyglet==1.5.15
-Pygments==2.9.0
-pyLDAvis==3.3.1
-pylint==2.9.3
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyperclip==1.8.2
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141720057/work
-python-dateutil==2.8.1
-python-editor==1.0.4
-pytz==2021.1
-pyu2f==0.1.5
-PyYAML==5.4.1
-pyzmq==22.1.0
-regex==2021.7.6
-requests==2.25.1
-retry-decorator==1.1.1
-rsa==4.7.2
-sacremoses==0.0.45
+# install gpu version
+# torch==1.9.1
+numpy==1.19.5
+pandas==1.1.5
+transformers==4.11.3
+datasets==1.14.0
+pytorch-lightning==1.4.9
+rich==10.12.0
+wandb==0.12.5
+hydra-core==1.1.1
+hydra-colorlog==1.1.0
+hydra-optuna-sweeper==1.1.1
+optuna==2.10.0
+plotly==5.3.1
+seaborn==0.11.2
+matplotlib==3.3.4
 scikit-learn==0.24.2
-scipy==1.4.1
-seaborn==0.11.1
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-sentence-transformers==1.1.1
-sentencepiece==0.1.96
-sentry-sdk==1.3.0
-shortuuid==1.0.1
-six==1.16.0
-sklearn==0.0
-smart-open==5.1.0
-smmap==4.0.0
-SQLAlchemy==1.4.20
-stevedore==3.3.0
-stone==3.2.1
-subprocess32==3.5.4
 tables==3.6.1
-tenacity==8.0.1
-terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl==2.2.0
-tokenizers==0.10.3
-toml==0.10.2
-torch==1.8.1+cu101
-torchvision==0.10.0
-tornado==6.1
-tqdm==4.56.0
-traitlets==5.0.5
-transformers==4.8.2
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-wandb==0.10.33
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wordcloud==1.8.1
-wrapt==1.12.1
-xxhash==2.0.2
-zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
