--- a/motif/lightning/conf/config.yaml
+++ b/motif/lightning/conf/config.yaml
@@ -6,8 +6,8 @@ defaults:
   - trainer: default.yaml
   - module: contrastive_model.yaml
   - datamodule: random_pair.yaml
-  - callbacks: default.yaml
-  - logger: null # set logger here or use command line (e.g. `python run.py logger=wandb`)
+  - callbacks: wandb.yaml
+  - logger: wandb # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
   - mode: default.yaml
 
