--- a/motif/lightning/conf/module/contrastive_model.yaml
+++ b/motif/lightning/conf/module/contrastive_model.yaml
@@ -7,7 +7,9 @@ num_positives: ${datamodule.num_positives}
 num_negatives: ${datamodule.num_negatives}
 
 temperature: 0.05
+# or rankloss
+criterion: infoNCE
 
 # use in logger group / notes
 group: contrastive
-notes: "contrastive learning with #pos=${.num_positives} / #neg=${.num_negatives}. Model=${.arch}+${.seq_len}"
+notes: "contrastive learning model=${.arch}+${.seq_len}"
