--- a/motif/lightning/conf/datamodule/fine_tune.yaml
+++ b/motif/lightning/conf/datamodule/fine_tune.yaml
@@ -1,12 +1,9 @@
-_target_: src.datamodules.RandomPairDM.RandomPairDM
+_target_: src.datamodules.FineTuneDM.FineTuneDM
 
 data_dir: ${data_dir} # data_dir is specified in config.yaml
 train_val_test_split: "80_20_0"
 
-num_positives: 2
-num_negatives: 5
-
-batch_size: 2
+batch_size: 8
 num_workers: 3
 pin_memory: True
 
@@ -14,4 +11,4 @@ arch: ${module.arch}
 seq_len: ${module.seq_len}
 cache_dir: ${data_dir}/cache
 
-notes: "with #pos=${.num_positives} / #neg=${.num_negatives} bsz=${.batch_size}"
+notes: "Fine tune data with bsz=${.batch_size}"
