--- a/motif/lightning/conf/hparams_search/lr.yaml
+++ b/motif/lightning/conf/hparams_search/lr.yaml
@@ -8,7 +8,7 @@ defaults:
   - override /hydra/sweeper: optuna
 
 # choose metric which will be optimized by Optuna
-optimized_metric: "val/acc"
+optimized_metric: "valid/epoch/accuracy"
 
 hydra:
   # here we define Optuna hyperparameter search
@@ -40,21 +40,14 @@ hydra:
       multivariate: false
       warn_independent_sampling: true
 
-    # define range of hyperparameters
     search_space:
-      datamodule.batch_size:
-        type: categorical
-        choices: [ 32, 64, 128 ]
-      model.lr:
+      module.optim.lr:
         type: float
-        low: 0.0001
-        high: 0.2
-      model.lin1_size:
-        type: categorical
-        choices: [ 32, 64, 128, 256, 512 ]
-      model.lin2_size:
-        type: categorical
-        choices: [ 32, 64, 128, 256, 512 ]
-      model.lin3_size:
-        type: categorical
-        choices: [ 32, 64, 128, 256, 512 ]
+        low: 1E-7
+        high: 1E-3
+        log: True
+      module.optim.weight_decay:
+        type: float
+        low: 1E-4
+        high: 1E-1
+        log: True
