--- a/motif/lightning/conf/module/optim/AdamW.yaml
+++ b/motif/lightning/conf/module/optim/AdamW.yaml
@@ -1,6 +1,3 @@
-_target_: torch.optim.AdamW
-lr: 0.001
-betas: [ 0.9, 0.999 ]
-eps: 1E-08
-weight_decay: 1E-4
-amsgrad: False
+_target_: transformers.AdamW
+lr: 1E-5
+weight_decay: 0.01
