--- a/motif/lightning/conf/trainer/default.yaml
+++ b/motif/lightning/conf/trainer/default.yaml
@@ -4,8 +4,9 @@ _target_: pytorch_lightning.Trainer
 gpus: 1
 
 min_epochs: 1
-max_epochs: 10
+max_epochs: 30
 
+num_sanity_val_steps: 0
 weights_summary: "top"
 progress_bar_refresh_rate: 5
 resume_from_checkpoint: null
