--- a/motif/lightning/conf/datamodule/fine_tune.yaml
+++ b/motif/lightning/conf/datamodule/fine_tune.yaml
@@ -3,6 +3,15 @@ _target_: src.datamodules.FineTuneDM.FineTuneDM
 data_dir: ${data_dir} # data_dir is specified in config.yaml
 train_val_test_split: "80_20_0"
 
+aug_list:
+  # - _target_: augly.text.InsertPunctuationChars
+  #   granularity: word
+  #   cadence: 4.3
+  #   p: 0.5
+  - _target_: src.datamodules.FineTuneDM.Translation
+    lang: fr
+    p: 0.5
+
 batch_size: 8
 num_workers: 3
 pin_memory: True
